cmake_minimum_required (VERSION 3.0)
project(lzma)				 

set(CMAKE_C_STANDARD 11)
set(LIBRARY_TYPE "STATIC")
set(LZ4_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src)

set(CMAKE_INSTALL_INCLUDEDIR ${CMAKE_INSTALL_PREFIX}/include)
set(CMAKE_INSTALL_LIBDIR ${CMAKE_INSTALL_PREFIX}/lib)

if(LINUX)
    set(CMAKE_C_FLAGS "-fPIC" CACHE STRING "" FORCE)
endif()

# add sources
add_library(${PROJECT_NAME} ${LIBRARY_TYPE}
    ${LZ4_SOURCE_FILES}/7zAlloc.c
	${LZ4_SOURCE_FILES}/7zArcIn.c
	${LZ4_SOURCE_FILES}/7zBuf.c
	${LZ4_SOURCE_FILES}/7zBuf2.c
	${LZ4_SOURCE_FILES}/7zCrc.c
	${LZ4_SOURCE_FILES}/7zCrcOpt.c
	${LZ4_SOURCE_FILES}/7zDec.c
	${LZ4_SOURCE_FILES}/7zFile.c
	${LZ4_SOURCE_FILES}/7zStream.c
	${LZ4_SOURCE_FILES}/Aes.c
	${LZ4_SOURCE_FILES}/AesOpt.c
	${LZ4_SOURCE_FILES}/Alloc.c
	${LZ4_SOURCE_FILES}/Bcj2.c
	${LZ4_SOURCE_FILES}/Bcj2Enc.c
	${LZ4_SOURCE_FILES}/Bra.c
	${LZ4_SOURCE_FILES}/Bra86.c
	${LZ4_SOURCE_FILES}/BraIA64.c
	${LZ4_SOURCE_FILES}/CpuArch.c
	${LZ4_SOURCE_FILES}/Delta.c
	${LZ4_SOURCE_FILES}/DllSecur.c
	${LZ4_SOURCE_FILES}/LzFind.c
	${LZ4_SOURCE_FILES}/LzFindMt.c
	${LZ4_SOURCE_FILES}/Lzma2Dec.c
	${LZ4_SOURCE_FILES}/Lzma2DecMt.c
	${LZ4_SOURCE_FILES}/Lzma2Enc.c
	${LZ4_SOURCE_FILES}/Lzma86Dec.c
	${LZ4_SOURCE_FILES}/Lzma86Enc.c
	${LZ4_SOURCE_FILES}/LzmaDec.c
	${LZ4_SOURCE_FILES}/LzmaEnc.c
	${LZ4_SOURCE_FILES}/LzmaLib.c
	${LZ4_SOURCE_FILES}/MtCoder.c
	${LZ4_SOURCE_FILES}/MtDec.c
	${LZ4_SOURCE_FILES}/Ppmd7.c
	${LZ4_SOURCE_FILES}/Ppmd7Dec.c
	${LZ4_SOURCE_FILES}/Ppmd7Enc.c
	${LZ4_SOURCE_FILES}/Sha256.c
	${LZ4_SOURCE_FILES}/Sha256Opt.c
	${LZ4_SOURCE_FILES}/Sort.c
	${LZ4_SOURCE_FILES}/Threads.c
	${LZ4_SOURCE_FILES}/Xz.c
	${LZ4_SOURCE_FILES}/XzCrc64.c
	${LZ4_SOURCE_FILES}/XzCrc64Opt.c
	${LZ4_SOURCE_FILES}/XzDec.c
	${LZ4_SOURCE_FILES}/XzEnc.c
	${LZ4_SOURCE_FILES}/XzIn.c
 )
target_include_directories(${PROJECT_NAME} PUBLIC ".")
install(TARGETS ${PROJECT_NAME}   
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(FILES
		"${LZ4_SOURCE_FILES}/7z.h"
		"${LZ4_SOURCE_FILES}/7zAlloc.h"
		"${LZ4_SOURCE_FILES}/7zBuf.h"
		"${LZ4_SOURCE_FILES}/7zCrc.h"
		"${LZ4_SOURCE_FILES}/7zFile.h"
		"${LZ4_SOURCE_FILES}/7zTypes.h"
		"${LZ4_SOURCE_FILES}/7zVersion.h"
		"${LZ4_SOURCE_FILES}/Aes.h"
		"${LZ4_SOURCE_FILES}/Alloc.h"
		"${LZ4_SOURCE_FILES}/Bcj2.h"
		"${LZ4_SOURCE_FILES}/Bra.h"
		"${LZ4_SOURCE_FILES}/Compiler.h"
		"${LZ4_SOURCE_FILES}/CpuArch.h"
		"${LZ4_SOURCE_FILES}/Delta.h"
		"${LZ4_SOURCE_FILES}/DllSecur.h"
		"${LZ4_SOURCE_FILES}/LzFind.h"
		"${LZ4_SOURCE_FILES}/LzFindMt.h"
		"${LZ4_SOURCE_FILES}/LzHash.h"
		"${LZ4_SOURCE_FILES}/Lzma2Dec.h"
		"${LZ4_SOURCE_FILES}/Lzma2DecMt.h"
		"${LZ4_SOURCE_FILES}/Lzma2Enc.h"
		"${LZ4_SOURCE_FILES}/Lzma86.h"
		"${LZ4_SOURCE_FILES}/LzmaDec.h"
		"${LZ4_SOURCE_FILES}/LzmaEnc.h"
		"${LZ4_SOURCE_FILES}/LzmaLib.h"
		"${LZ4_SOURCE_FILES}/MtCoder.h"
		"${LZ4_SOURCE_FILES}/MtDec.h"
		"${LZ4_SOURCE_FILES}/Ppmd.h"
		"${LZ4_SOURCE_FILES}/Ppmd7.h"
		"${LZ4_SOURCE_FILES}/Precomp.h"		
		"${LZ4_SOURCE_FILES}/RotateDefs.h"
		"${LZ4_SOURCE_FILES}/Sha256.h"
		"${LZ4_SOURCE_FILES}/Sort.h"
		"${LZ4_SOURCE_FILES}/Threads.h"
		"${LZ4_SOURCE_FILES}/Xz.h"
		"${LZ4_SOURCE_FILES}/XzCrc64.h"
		"${LZ4_SOURCE_FILES}/XzEnc.h"
		DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")

if (LINUX)
    add_compile_options(-fPIC)
endif()
